--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "npm test -- --coverage --watchAll"
   },
   "dependencies": {
     "next": "14.2.18",
